--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -6,3 +6,47 @@
 body, label, .checkbox label {
 	font-weight: 300;
 }
+// The "Publish Status" area
+.status-post {
+	border: 1px solid #e3e3e3;
+	background: white;
+	margin-bottom: 3em;
+	padding: 0;
+
+	textarea {
+		border: none;
+
+		&:focus {
+			box-shadow: none;
+		}
+	}
+
+	.status-post-submit {
+		border-top: 1px solid #e9e9e9;
+		padding: .5em 1em;
+		margin-bottom: 0;
+		overflow: hidden;
+
+		.btn { float: right; }
+	}
+}
+// Each individual status
+.status-media {
+	border: 1px solid #e3e3e3;
+	background: white;
+	padding: 1em;
+	margin-bottom: 2em;
+}
+
+// Users List
+.users {
+	margin-bottom: 3em;
+}
+
+.user-block {
+	text-align: center;
+
+	.avatar {
+		margin: auto;
+	}
+}
