--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,5 +1,8 @@
 @import "bootstrap/bootstrap";
 
+body:
+	padding-top: 70px;
+
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
