--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6238,5 +6238,14 @@ label,
   padding: 1em;
   margin-bottom: 2em;
 }
+.users {
+  margin-bottom: 3em;
+}
+.user-block {
+  text-align: center;
+}
+.user-block .avatar {
+  margin: auto;
+}
 
 /*# sourceMappingURL=app.css.map */
