--- a/public/css/libs.css
+++ b/public/css/libs.css
@@ -934,4 +934,92 @@ body.stop-scrolling {
     -o-transform: translateY(145%);
     transform: translateY(145%); } }
 
+// Each individual status
+.status-media {
+	border: 1px solid #e3e3e3;
+	border-bottom: none;
+	background: white;
+	padding: 1em;
+}
+
+.status-media-heading {
+	color: rgb(64, 157, 209);
+	position: relative;
+	top: 5px;
+}
+
+.status-media-body {
+	color: #B3BAC0;
+	font-size: 1.2em;
+	padding: .5em 1em 1em 1em;
+}
+
+.status-media-object {
+	position: relative;
+	top: 13px;
+	left: 10px;
+	border: 1px solid rgb(238, 238, 238);
+}
+
+.status-media-time {
+	text-transform: uppercase;
+	font-size: 0.7em;
+	letter-spacing: 0.15em;
+	color: rgb(204, 208, 211);
+}
+
+// The "Publish Status" area
+.status-post {
+	border: 1px solid #e3e3e3;
+	background: white;
+	margin-bottom: 3em;
+	padding: 0;
+
+	textarea {
+		border: none;
+
+		&:focus {
+			box-shadow: none;
+		}
+	}
+
+	.status-post-submit {
+		border-top: 1px solid #e9e9e9;
+		padding: .5em 1em;
+		margin-bottom: 0;
+		overflow: hidden;
+		background: #FDFCFC;
+
+		.btn {
+			float: right;
+			background: rgb(46, 177, 228);
+			color: white;
+			text-transform: uppercase;
+			letter-spacing: 0.06em;
+			font-family: helvetica;
+
+			&:hover {
+				background: rgb(39, 144, 177);
+			}
+		}
+	}
+}
+
+.comments__create-form textarea {
+	border: 1px solid #e3e3e3;
+	border-top: none;
+	border-radius: 0;
+}
+
+.comments {
+	margin-bottom: 5em;
+}
+
+.comments__comment {
+	background: #a29f9f;
+	margin-top: 0;
+	border: 1px solid #a29f9f;
+	border-bottom: 1px solid #e3e3e3;
+}
+
 /*# sourceMappingURL=libs.css.map */
