--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,55 +1,31 @@
 @import "bootstrap/bootstrap";
+@import "modules/nav";
+@import "modules/button";
+@import "modules/status";
+@import "modules/users";
 
-body:
-	padding-top: 70px;
 
-@btn-font-weight: 300;
-@font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
 
-body, label, .checkbox label {
-	font-weight: 300;
-}
-// The "Publish Status" area
-.status-post {
-	border: 1px solid #e3e3e3;
-	background: white;
-	margin-bottom: 3em;
-	padding: 0;
-
-	textarea {
-		border: none;
-
-		&:focus {
-			box-shadow: none;
-		}
-	}
-
-	.status-post-submit {
-		border-top: 1px solid #e9e9e9;
-		padding: .5em 1em;
-		margin-bottom: 0;
-		overflow: hidden;
-
-		.btn { float: right; }
-	}
-}
-// Each individual status
-.status-media {
-	border: 1px solid #e3e3e3;
-	background: white;
-	padding: 1em;
-	margin-bottom: 2em;
+// @btn-font-weight: 300;
+// @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
+//
+// body, label, .checkbox label {
+// 	font-weight: 300;
+// }
+// Main
+body {
+	padding-top: 80px;
+	background-color: rgb(240, 240, 240);
+	font-family: 'Roboto', sans-serif;
 }
 
-// Users List
-.users {
-	margin-bottom: 3em;
+.container h1:first-of-type {
+	margin-top: 0;
 }
 
-.user-block {
+.page-header {
 	text-align: center;
-
-	.avatar {
-		margin: auto;
-	}
+	margin-bottom: 1em;
+	padding-bottom: .5em;
+	border-bottom: 1px solid #ddd;
 }
